--- a/css/resume.css
+++ b/css/resume.css
@@ -1,123 +1,3 @@
-/* *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-body{
-    min-height: 100vh;
-    width: 100%;
-}
-
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-code{
-    font-family: 'Courier New', Courier, monospace;
-}
-
-h1{
-    font-size: larger;
-    margin: 6px 0;
-}
-
-h2{
-    font-size: 1.1rem;
-    color: #000000d4;
-}
-
-p,#right li,#right code{
-    color: rgba(46, 45, 45, 0.774);
-    font-size: 0.9rem;
-}
-
-#mainBody{
-    min-height: 100vh;
-    width: 800px;
-    flex-shrink: 0;
-    border-radius: 10px;
-    box-shadow: 0 0 15px black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(31, 98, 31);
-}
-
-#left{
-    background-color: rgb(25, 57, 25);
-    min-height: 100vh;
-    width: 25%;
-    border-radius: 10px 0 0 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 34px;
-    padding-top: 30px;
-    color: white;
-
-}
-
-#left #img{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    text-align: center;
-}
-
-#left #img img{
-    width: 80px;
-    border-radius: 50%;
-}
-
-#left h2{
-    color: white;
-}
-
-#details{
-    padding-top: 10px;
-    color: white;
-}
-#left #last{
-    flex: 1 1 0;
-}
-#right{
-    height: 100%;
-    width: 75%;
-    border-radius: 0 10px  10px 0;
-    display: flex;
-    flex-direction: column;
-    padding: 34px;
-    padding-top: 30px;
-    color: black;
-    background-color: whitesmoke;
-    gap: 16px;
-    text-align: justify;
-}
-
-
-#right div{
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-}
-
-#right div *{
-    padding: 2px 3px;
-}
-
-b{
-    padding: 0 !important;
-    margin: 0;
-} */
-
-
 *{
     margin: 0;
     padding: 0;
@@ -171,13 +51,13 @@ hr{
 #left{
     background-color: rgb(25, 57, 25);
     min-height: 100%; /* Make it fill the container height */
-    width: 25%;
+    width: 200px;
     border-radius: 10px 0 0 10px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     padding: 16px;
-    padding-top: 30px;
+    padding-top: 48px;
     color: white;
     gap: 20px;
 }
@@ -204,8 +84,8 @@ hr{
     padding: 6px 16px;
 }
 
-#left p,#left li{
-    color: rgba(245, 245, 245, 0.916);
+#left p,#left li,#left a{
+    color: rgb(245 245 245 / 92%);
     margin: 4px;
     font-size: small;
 }
@@ -229,7 +109,7 @@ hr{
 
 #right{
     height: 100%; /* Make it fill the container height */
-    width: 75%;
+    width: 600px;
     border-radius: 0 10px 10px 0;
     display: flex;
     flex-direction: column;
